# Banker_Algorithm

./: .gitignore  CMakeLists.txt  README.md  build.py  builld.py
Banker_Algo/: CMakeLists.txt  main.cpp
Banker_Algo/lib/: CMakeLists.txt  matrix.hpp  row.cpp  row.hpp
Banker_Algo/lib/allocator/: CMakeLists.txt  allocator.cpp  allocator.hpp
Banker_Algo/lib/allocator/read_write/: generator.cpp  generator.hpp  reader.cpp  reader.hpp
Banker_Algo/lib/allocator/read_write/row_matrix/: matrix.cpp  matrix.hpp  row.cpp  row.hpp
Banker_Algo/lib/read_write/: CMakeLists.txt  generator.cpp  generator.hpp  reader.cpp  reader.hpp
Banker_Algo/lib/read_write/row_matrix/: CMakeLists.txt  matrix.cpp  matrix.hpp  row.cpp  row.hpp
Banker_Algo/lib/row_matrix/: CMakeLists.txt  matrix.cpp  matrix.hpp  row.cpp  row.hpp
Banker_Algo/lib/tests/allocatorTests/: allocatorExample.cpp  allocatorSetter.cpp
Banker_Algo/lib/tests/genTests/: fileTest3.txt  genCtor.cpp  genGenExample.cpp  genGenFile.cpp  genSaveFile.cpp
Banker_Algo/lib/tests/matrixTests/: matrixAppend.cpp  matrixCtor.cpp  matrixSize.cpp  matrixSwap.cpp
Banker_Algo/lib/tests/readerTests/: readerGetAllocated.cpp
Banker_Algo/lib/tests/rowTests/: rowAdd.cpp  rowCtor.cpp  rowCtorCpy.cpp  rowCtorDef.cpp  rowLTGT.cpp  rowSize.cpp
Banker_Algo/tests/rowTests/: rowCtor.cpp
